# LoLMLACN

./: .gitignore  Readme.md
Data/: .gitignore  Cargo.toml  Readme.md  output_graph.csv  output_map.csv
Data/aggregator/: Cargo.toml  output_buckets.csv
Data/aggregator/src/: main.rs
Data/grapher/: Cargo.toml
Data/grapher/src/: main.rs
Data/ingestor/: Cargo.toml
Data/ingestor/src/: database.rs  main.rs
Data/ingestorv2/: Cargo.toml
Data/ingestorv2/src/: database.rs  main.rs  processors.rs  traits.rs
MachineLearning/: DashBoard.py  DataFramePlayers.py  EDAandSplit.py  QueryBuilders.py  Readme.md  constantsQueues.py  testRapids.py  testeScikit.py  testeScikitCloud.py
MachineLearning/JSONS/: KNN_cpu.json  KNN_gpu.json  KNN_local_cpu.json  LR_cpu.json  LR_gpu.json  RandForest_cpu.json  RandForest_gpu.json  RandForest_local_cpu.json  SVM_cpu.json  SVM_gpu.json  SVM_local_cpu.json  XGBoost10_cpu.json  XGBoost10_gpu.json  XGBoost10_local_cpu.json  XGBoost6_cpu.json  XGBoost6_gpu.json  XGBoost6_local_cpu.json
NetworkScience/: Readme.md  stuff.md
NetworkScience/consensation_algorithm_explanation/: algorithm_explanation.drawio
NetworkScience/network_analysis/: base_statistics.ipynb  visualisation.ipynb
NetworkScience/network_construction/: transform_graph.ipynb
aggregator/: Cargo.toml  output_buckets_mean.txt
grapher/: Cargo.toml
grapher/src/: indexer.rs  main.rs
ingestor/: Cargo.toml  MIMIC_III.ipynb  log-config.yml
ingestor/trash/: TODO.txt  leagueGM.json  match.json  ratelimits.txt  summoner.json
ingestorv2/: Cargo.toml
ingestorv2/src/: main.rs
(+10 files in other folders)
