[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
serde = "1.0.163"
tokio = { version = "1.28.1", features = ["full", "tracing"]}
anyhow = "1.0.71"
tracing = "0.1.37"
opensearch = "2.1.0"
csv = "1.2.2"
dotenv = "0.15.0"