[package]
name = "ingestorv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riven = { version = "2.18.0", features = ["tracing"] }
serde_json = "1.0.96"
serde = "1.0.163"
tokio = { version = "1.28.1", features = ["full", "tracing"]}
anyhow = "1.0.71"
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.17"
console-subscriber = "0.1.9"
tokio-task-manager = "0.2.0"
opensearch = "2.1.0"
futures = "0.3.28"
async-channel = "1.8.0"
clap = { version = "4.3.1", features = ["derive"] }
thiserror = "1.0.40"
dotenv = "0.15.0"